v0.0 - 2011-07-18

- first release (not announced), contains 5 puzzle types (nurikabe, akari,
  heyawake, hitori and picross).

v1.0 - 2012-08-23

- first proper release. 6 puzzle types added (hashiwokakero, masyu,
  slitherlink, yajilin, minesweeper, kuramasu)
- 5715 puzzles
- menu screen
- score tracking

v1.5 (in progress)

- showverify in heyawake, hitori and kuromasu ignores unfilled now
- 1 puzzle type added (mortal coil)
- ? puzzles